--- a/deploy_tools/gunicorn-upstart.template.conf
+++ b/deploy_tools/gunicorn-upstart.template.conf
@@ -5,8 +5,8 @@ stop on shutdown
 
 respawn
 
-setuid elspeth
-chdir /home/elspeth/sites/SITENAME/source
+setuid USERID
+chdir /home/USERID/sites/SITENAME/source
 exec ../virtualenv/bin/gunicorn \
 	--bind unix:/tmp/SITENAME.socket \
 	superlists.wsgi:application
